update - till links

--- a/index.html
+++ b/index.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Welcome to Kuldeep Gehlot's Component Library.</h1>
+
+    <h2>@typography</h2>
+
+    <h1>This is the biggest heading</h1>
+    <h2>This is the second biggest</h2>
+    <p>Let me show you the normal text. This is free flowing and will wrap at the end like a paragraph.</p>
+    <small>This is relatively smaller text.</small>
+
+    <h2>@container</h2>
+
+    <h3>fluid container</h3>
+    <div>This is a fluid container and it will go till the end of the page.</div>
+
+    <h3>centered container</h3>
+    <div>This is a centered container and it will go till the specified width.</div>
+
+    <h2>@links</h2>
+    <a href="/">Primary Link</a>
+    <a href="/">Secondary Link</a>
+
 </body>
 </html>
