--- a/index.html
+++ b/index.html
@@ -30,7 +30,27 @@
     <h2>@links</h2>
     <a href="/">Primary Link</a>
     <a href="/">Secondary Link</a>
+    <hr>
 
+    <h2>@lists</h2>
+    <h3>unordered list</h3>
+    <ul>
+    <li>Item one</li>
+    <li>Item two</li>
+    <li>Item three</li>
+    </ul>
+    <h3>unordered inline list</h3>
+    <ul>
+        <li>Inline Item one</li>
+        <li>Inline Item two</li>
+        <li>Inline Item three</li>
+    </ul>
+    <h3>reverse order list</h3>
+    <ol>
+        <li>milk</li>
+        <li>eggs</li>
+        <li>bread</li>
+    </ol>
     <hr>
 </body>
 </html>
