--- a/index.html
+++ b/index.html
@@ -52,5 +52,28 @@
         <li>bread</li>
     </ol>
     <hr>
+
+    <h2>@nav</h2>
+    <nav>
+        <div>iAmBrand</div>
+        <ul>
+            <li>
+                <a href="/">Home</a>
+            </li>
+            <li><a href="/">Products</a></li>
+            <li><a href="/">About</a></li>
+        </ul>
+    </nav>
+    <hr>
+    <h2>Header</h2>
+    <header>
+        <img src="images/hero.jpg" alt="">
+        <h1>Heading inside hero</h1>
+    </header>
+
+    
+    <div style="height: 30vh;">
+    
+    </div>
 </body>
 </html>
