--- a/index.html
+++ b/index.html
@@ -83,6 +83,9 @@
         <p>This will have gray background</p>
     </section>
 
+    <hr>
+    <h2>@footer</h2>
+
     <footer>
         <div>Some small heading inside footer</div>
         <ul>
