--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
     <h2>@lists</h2>
     <h3>unordered list</h3>
     <ul>
-    <li>Item one</li>
-    <li>Item two</li>
-    <li>Item three</li>
+    <li class="list-non-bullet">Item one</li>
+    <li class="list-non-bullet">Item two</li>
+    <li class="list-non-bullet">Item three</li>
     </ul>
     <h3>unordered inline list</h3>
     <ul>
-        <li>Inline Item one</li>
-        <li>Inline Item two</li>
-        <li>Inline Item three</li>
+        <li class="list-inline">Inline Item one</li>
+        <li class="list-inline">Inline Item two</li>
+        <li class="list-inline">Inline Item three</li>
     </ul>
     <h3>reverse order list</h3>
-    <ol>
+    <ol reversed>
         <li>milk</li>
         <li>eggs</li>
         <li>bread</li>
@@ -55,14 +55,14 @@
     <hr>
 
     <h2>@nav</h2>
-    <nav>
-        <div>iAmBrand</div>
-        <ul>
-            <li>
-                <a href="/">Home</a>
+    <nav class="navigation container">
+        <div class="nav-brand">iAmBrand</div>
+        <ul class="list-non-bullet nav-pills">
+            <li class="list-inline">
+                <a class="link link-active" href="/">Home</a>
             </li>
-            <li><a href="/">Products</a></li>
-            <li><a href="/">About</a></li>
+            <li class="list-inline"><a class="link" href="/">Products</a></li>
+            <li class="list-inline"><a class="link" href="/">About</a></li>
         </ul>
     </nav>
     <hr>
